# migracoes-venezuelanas

./: .gitignore  agent.Dockerfile  app.py  main.py  pyproject.toml
easypanel/: docker-compose.yml
outputs/: entrevistas_coordinates.csv
src/: app.py
src/agents/: Google.py  __init__.py
src/models/: __init__.py  cnae.py  entrevista.py  inference.py
src/prompts/: __init__.py  cnae.py  deslocamento.py  entrevista.py
src/routes/: inference.py
src/tools/: __init__.py  get_coordinates.py
